--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -102,26 +102,42 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Uncomment any line which starts from G = ... in order to run the cell. The rest lines should be commented\n"
+      ],
+      "metadata": {
+        "id": "FV10gud32jAm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#Uncomment any couple of lines in order to run the cell. The rest lines should be commented\n",
+        "# example for p2p-Gnutella08.txt\n",
+        "# G = nx.read_adjlist('/content/drive/MyDrive/graphs/graphs/p2p-Gnutella08.txt')\n",
         "\n",
-        "# # example for p2p-Gnutella08.txt\n",
-        "# G = nx.read_adjlist('/content/drive/MyDrive/graphs/p2p-Gnutella08.txt')\n",
+        "# example for email-Eu-core.txt\n",
+        "# G = nx.read_adjlist('/content/drive/MyDrive/graphs/graphs/email-Eu-core.txt')\n",
         "\n",
-        "# # example for email-Eu-core.txt\n",
-        "# G = nx.read_adjlist('/content/drive/MyDrive/graphs/email-Eu-core.txt')\n",
+        "# example for CA-HepTh.txt\n",
+        "# G = nx.read_adjlist('/content/drive/MyDrive/graphs/graphs/CA-HepTh.txt')\n",
         "\n",
-        "# # # example for CA-HepTh.txt\n",
-        "# G = nx.read_adjlist('/content/drive/MyDrive/graphs/CA-HepTh.txt')\n",
+        "# example for foo.txt\n",
+        "# G = nx.read_adjlist('/content/drive/MyDrive/graphs/graphs/foo.txt')\n",
         "\n",
-        "# # example for foo.txt\n",
-        "# G = nx.read_adjlist('/content/drive/MyDrive/graphs/foo.txt')"
+        "# example for foo1.txt\n",
+        "# G = nx.read_adjlist('/content/drive/MyDrive/graphs/graphs/foo1.txt')\n",
+        "\n",
+        "# example for foo2.txt\n",
+        "# G = nx.read_adjlist('/content/drive/MyDrive/graphs/graphs/foo2.txt')\n",
+        "\n",
+        "# example for foo3.txt\n",
+        "# G = nx.read_adjlist('/content/drive/MyDrive/graphs/graphs/foo3.txt')"
       ],
       "metadata": {
         "id": "PfhK9v79DWAx"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +163,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 2o Ερωτημα"
+        "# 2o Ερώτημα"
       ],
       "metadata": {
         "id": "ZixSa7eOTKeR"
